--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsw-node",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "main": "index.js",
   "author": "lencx <cxin1314@gmail.com>",
   "license": "MIT",
@@ -24,6 +24,7 @@
   "bugs": "https://github.com/lencx/rsw-node/issues",
   "dependencies": {
     "chalk": "^4.1.1",
+    "debug": "^4.3.1",
     "which": "^2.0.2"
   }
 }
