--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsw-node",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "index.js",
   "author": "lencx <cxin1314@gmail.com>",
   "license": "MIT",
@@ -25,6 +25,7 @@
   "dependencies": {
     "chalk": "^4.1.1",
     "debug": "^4.3.1",
+    "minimist": "^1.2.5",
     "which": "^2.0.2"
   }
 }
