--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsw-node",
-  "version": "0.1.2",
+  "version": "1.0.0",
   "main": "index.js",
   "author": "lencx <cxin1314@gmail.com>",
   "license": "MIT",
@@ -26,6 +26,7 @@
     "chalk": "^4.1.1",
     "debug": "^4.3.1",
     "minimist": "^1.2.5",
+    "rimraf": "^3.0.2",
     "which": "^2.0.2"
   }
 }
